welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	case (x,y,z) if (isMorning==true && isMom=true) => return true
                                         ^answerCell:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: (Boolean, Boolean, Boolean)
	case (_,_) => return true
             ^